--- a/beast/build.xml
+++ b/beast/build.xml
@@ -17,5 +17,7 @@
         <linkfile src="root.bp" dest="Android.bp" />
         <linkfile src="bootstrap.bash" dest="bootstrap.bash" />
     </project>
+	
+    <project path="art" name="platform_art" remote="beast" />
   
 </manifest>
